Added resources to Values

--- a/charts/camunda-postgresql/templates/deploymentconfig.yaml
+++ b/charts/camunda-postgresql/templates/deploymentconfig.yaml
@@ -72,7 +72,11 @@ spec:
           timeoutSeconds: 1
         resources:
           limits:
+            cpu: {{ .Values.cpu_limit }}
             memory: {{ .Values.memory_limit }}
+					requests:
+            cpu: {{ .Values.cpu_request }}
+            memory: {{ .Values.memory_request }}
         securityContext:
           capabilities: {}
           privileged: false
