--- a/charts/formio-mongodb/templates/statefulset.yaml
+++ b/charts/formio-mongodb/templates/statefulset.yaml
@@ -94,3 +94,4 @@ spec:
       resources:
         requests:
           storage: {{ .Values.volume_capacity }}
+      storageClassName: {{ .Values.sc_mongo }}
