--- a/charts/forms-flow-webapi-postgresql/templates/persistentvolumeclaim.yaml
+++ b/charts/forms-flow-webapi-postgresql/templates/persistentvolumeclaim.yaml
@@ -11,3 +11,4 @@ spec:
   resources:
     requests:
       storage: "{{ .Values.persistent_volume_size }}"
+  storageClassName: "{{ .Values.persistent_volume_class }}"
