--- a/charts/forms-flow-analytics-postgresql/values.yaml
+++ b/charts/forms-flow-analytics-postgresql/values.yaml
@@ -1,9 +1,14 @@
 app_group: formio
+cpu_limit: 100m
+cpu_request: 50m
 database_host: forms-flow-analytics-db
 database_name: postgres
 database_port: "5432"
 database_user: postgres
+memory_limit: 512Mi
+memory_request: 256Mi
 name: forms-flow-analytics-postgresql
+persistent_volume_class: nfs-client 
 persistent_volume_size: 1Gi
 postgresql_admin_password: admin
 postgresql_image_name: postgresql
