--- a/charts/forms-flow-analytics.build/templates/buildconfig.yaml
+++ b/charts/forms-flow-analytics.build/templates/buildconfig.yaml
@@ -11,11 +11,11 @@ spec:
       name: "{{ .Chart.Name }}-redash:{{ .Values.image_tag }}"
   resources:
     limits:
-      cpu: "2"
-      memory: 8Gi
+      cpu: "{{ .Values.cpu_limit }}"
+      memory: "{{ .Values.memory_limit }}"
     requests:
-      cpu: "1"
-      memory: 4Gi
+      cpu: "{{ .Values.cpu_request }}"
+      memory: "{{ .Values.memory_request }}"
   source:
     git:
       ref: {{ .Values.source_repository_ref }}
