--- a/charts/forms-flow-analytics.build/values.yaml
+++ b/charts/forms-flow-analytics.build/values.yaml
@@ -1,3 +1,7 @@
 image_tag: latest
+cpu_request: 1
+cpu_limit: 2
+memory_limit: 8Gi
+memory_request: 4Gi 
 source_repository_ref: master
 source_repository_url: https://github.com/AOT-Technologies/redash
