--- a/charts/forms-flow-forms/values.yaml
+++ b/charts/forms-flow-forms/values.yaml
@@ -1,5 +1,9 @@
+cpu_limit: 200m
+cpu_request: 100m 
 forms_url: formio.{{ .Release.Namespace }}.apps.devops.aot-technologies.com
 formsflow_secret: forms-flow-ai
 image_tag: latest
 image_url: image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Chart.Name }}
+memory_limit: 512M
+memory_request: 256M
 mongodb_secret_name: formio-mongodb
