--- a/charts/forms-flow-web/values.yaml
+++ b/charts/forms-flow-web/values.yaml
@@ -1,11 +1,15 @@
 app_name: forms-flow-ai
 camunda_url: bpm.{{ .Release.Namespace }}.apps.devops.aot-technologies.com
+cpu_limit: 100m
+cpu_request: 50m
 forms_url: formio.{{ .Release.Namespace }}.apps.devops.aot-technologies.com
 image_tag: latest
 image_url: image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Chart.Name }}
 kc_mount_path: /usr/share/nginx/html/config/kc
 keycloak_realm: forms-flow-ai
 keycloak_url: idm.{{ .Release.Namespace }}.apps.devops.aot-technologies.com
+memory_limit: 100Mi
+memory_request: 200Mi
 mount_path: /usr/share/nginx/html/config/
 react_app_anonymous_id: '61856bbc69b630461b977ae1'
 react_app_client_id: '61856bbc69b630461b977ae3'
