--- a/charts/forms-flow-webapi/templates/deploymentconfig.yaml
+++ b/charts/forms-flow-webapi/templates/deploymentconfig.yaml
@@ -10,7 +10,13 @@ spec:
     app: {{ .Chart.Name }}
   strategy:
     activeDeadlineSeconds: 21600
-    resources: {}
+    resources:
+      limits:
+        cpu: "{{ .Values.cpu_limit }}"
+        memory: "{{ .Values.memory_limit }}"
+      requests:
+        cpu: "{{ .Values.cpu_request }}"
+        memory: "{{ .Values.memory_request }}"
     rollingParams:
       intervalSeconds: 1
       maxSurge: 25%
