--- a/charts/redash-redis/values.yaml
+++ b/charts/redash-redis/values.yaml
@@ -1,8 +1,13 @@
 app_name: redash
+cpu_limit: 200m
+cpu_request: 100m
+memory_limit: 256Mi
+memory_request: 128Mi
 redis_exporter_image: oliver006/redis_exporter
 redis_exporter_name: redash-exporter
 redis_exporter_tag: v1.14.0-alpine
 redis_image: redis
 redis_tag: latest
 storage: 1Gi
-storage_size: 2Gi
+storage_class: nfs-client
+storage_size: 10Gi
