--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.2.1
         with:
-          charts_dir: kubernetes/helm
+          charts_dir: charts
 
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
