--- a/charts/forms-flow-bpm/Chart.yaml
+++ b/charts/forms-flow-bpm/Chart.yaml
@@ -1,4 +1,8 @@
 ---
 apiVersion: v2
+dependencies:
+  - name: camunda-postgresql
+    version: "0.1.0"
+    repository: "file://charts/camunda-postgresql"
 name: forms-flow-bpm
 version: v0.1.0
