--- a/charts/forms-flow-analytics/Chart.yaml
+++ b/charts/forms-flow-analytics/Chart.yaml
@@ -1,5 +1,14 @@
 ---
 apiVersion: v2
+dependencies:
+  - name: forms-flow-analytics-postgresql
+    #repository: 'https://cberg-aot.github.io/helm-charts'
+    repository: 'file://forms-flow-analytics-postgresql'
+    version: 0.1.0
+  - name: redash-redis
+    #repository: 'https://cberg-aot.github.io/helm-charts'
+    repository: 'file://redash-redis'
+    version: 0.1.0
 name: forms-flow-analytics
 tags: forms-flow-analytics
 version: v0.1.0
