--- a/charts/forms-flow-webapi/Chart.yaml
+++ b/charts/forms-flow-webapi/Chart.yaml
@@ -1,5 +1,10 @@
 ---
 apiVersion: v2
+dependencies:
+  - name: forms-flow-webapi-postgresql
+    #repository: 'https://cberg-aot.github.io/helm-charts'
+    repository: 'file://../forms-flow-webapi-postgresql'
+    version: 0.1.0
 name: forms-flow-webapi
 tags: forms-flow-webapi
 version: v0.1.0
