--- a/charts/forms-flow-forms/templates/deploymentconfig.yaml
+++ b/charts/forms-flow-forms/templates/deploymentconfig.yaml
@@ -43,7 +43,7 @@ spec:
             secretKeyRef:
               key: FORMIO_ROOT_PASSWORD
               name: {{ .Values.formsflow_secret }}
-        image: "{{ tpl .Values.image_url }}:{{ .Values.image_tag }}"
+        image: "{{ tpl .Values.image_url . }}:{{ .Values.image_tag }}"
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 3
