--- a/charts/forms-flow-webapi/templates/deploymentconfig.yaml
+++ b/charts/forms-flow-webapi/templates/deploymentconfig.yaml
@@ -103,7 +103,7 @@ spec:
               name: "{{ .Values.formsflow_config_name }}"
         - name: FORMSFLOW_API_CORS_ORIGINS
           value: '*'
-        image: "{{ tpl .Values.image_url }}:{{ .Values.tag_name }}"
+        image: "{{ tpl .Values.image_url . }}:{{ .Values.tag_name }}"
         name: "{{ .Chart.Name }}"
         ports:
         - containerPort: 5000
