--- a/charts/forms-flow-webapi/values.yaml
+++ b/charts/forms-flow-webapi/values.yaml
@@ -2,7 +2,7 @@ cpu_limit: 100m
 cpu_request: 50m
 formsflow_config_name: forms-flow-ai
 formsflow_secret: forms-flow-ai
-image_url: 'image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}/{{ .Chart.Name }}:{{ .Values.tag_name }}'
+image_url: 'image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}-tools/{{ .Chart.Name }}.build:{{ .Values.tag_name }}'
 memory_limit: 400Mi
 memory_request: 300Mi
 mongodb_secret_name: formio-mongodb
