--- a/charts/forms-flow-bpm.build/values.yaml
+++ b/charts/forms-flow-bpm.build/values.yaml
@@ -1,8 +1,8 @@
 image_tag: latest
-cpu_request: 500m
 cpu_limit: 800m
-memory_limit: 500Mi
-memory_request: 1Gi 
+cpu_request: 500m
+memory_limit: 1Gi
+memory_request: 512Mi
 source_context_dir: /forms-flow-bpm
 source_repository_ref: master
 source_repository_url: https://github.com/AOT-Technologies/forms-flow-ai
