--- a/charts/forms-flow-analytics/templates/deploymentconfig.yaml
+++ b/charts/forms-flow-analytics/templates/deploymentconfig.yaml
@@ -104,7 +104,7 @@ spec:
       - "{{ .Chart.Name }}-server"
       from:
         kind: ImageStreamTag
-        name: "{{ .Chart.Name }}-redash:{{ .Values.image_tag }}"
+        name: "{{ .Chart.Name }}.build-redash:{{ .Values.image_tag }}"
     type: ImageChange
 ---
 apiVersion: apps.openshift.io/v1
@@ -196,7 +196,7 @@ spec:
       - "{{ .Chart.Name }}-adhoc-worker"
       from:
         kind: ImageStreamTag
-        name: "{{ .Chart.Name }}-redash:{{ .Values.image_tag }}"
+        name: "{{ .Chart.Name }}.build-redash:{{ .Values.image_tag }}"
         namespace: "{{ .Release.Namespace }}"
     type: ImageChange
 ---
@@ -289,7 +289,7 @@ spec:
       - "{{ .Chart.Name }}-scheduled-worker"
       from:
         kind: ImageStreamTag
-        name: "{{ .Chart.Name }}-redash:{{ .Values.image_tag }}"
+        name: "{{ .Chart.Name }}.build-redash:{{ .Values.image_tag }}"
         namespace: "{{ .Release.Namespace }}"
     type: ImageChange
 ---
@@ -378,7 +378,7 @@ spec:
       - "{{ .Chart.Name }}-scheduler"
       from:
         kind: ImageStreamTag
-        name: "{{ .Chart.Name }}-redash:{{ .Values.image_tag }}"
+        name: "{{ .Chart.Name }}.build-redash:{{ .Values.image_tag }}"
         namespace: "{{ .Release.Namespace }}"
     type: ImageChange
 ---
@@ -471,6 +471,6 @@ spec:
       - "{{ .Chart.Name }}-worker"
       from:
         kind: ImageStreamTag
-        name: "{{ .Chart.Name }}-redash:{{ .Values.image_tag }}"
+        name: "{{ .Chart.Name }}.build-redash:{{ .Values.image_tag }}"
         namespace: "{{ .Release.Namespace }}"
     type: ImageChange
