--- a/charts/forms-flow-idm/values.yaml
+++ b/charts/forms-flow-idm/values.yaml
@@ -38,11 +38,11 @@ keycloak:
     
   resources:
     limits:
-      cpu: 500m
-      memory: 700M
+      cpu: 700m
+      memory: 1Gi
     requests:
-      cpu: 350m
-      memory: 512M
+      cpu: 500m
+      memory: 512Mi
 
   route:
     enabled: true
