--- a/charts/forms-flow-analytics/charts/redash-redis/values.yaml
+++ b/charts/forms-flow-analytics/charts/redash-redis/values.yaml
@@ -1,8 +1,8 @@
 app_name: redash
 cpu_limit: 400m
 cpu_request: 300m
-memory_limit: 256Mi
-memory_request: 128Mi
+memory_limit: 1Gi
+memory_request: 512Mi
 redis_exporter_image: oliver006/redis_exporter
 redis_exporter_name: redash-exporter
 redis_exporter_tag: v1.14.0-alpine
