--- a/charts/forms-flow-analytics/templates/route.yaml
+++ b/charts/forms-flow-analytics/templates/route.yaml
@@ -10,7 +10,7 @@ spec:
   port:
     targetPort: "7000"
   tls:
-    insecureEdgeTerminationPolicy: Redirect
+    insecureEdgeTerminationPolicy: Allow
     termination: edge
   to:
     kind: Service
