--- a/charts/forms-flow-forms/templates/route.yaml
+++ b/charts/forms-flow-forms/templates/route.yaml
@@ -9,7 +9,7 @@ spec:
   port:
     targetPort: "3001"
   tls:
-    insecureEdgeTerminationPolicy: Allow
+    insecureEdgeTerminationPolicy: Redirect
     termination: edge
   to:
     kind: Service
