--- a/charts/forms-flow-ai/templates/configmap.yaml
+++ b/charts/forms-flow-ai/templates/configmap.yaml
@@ -4,13 +4,13 @@ kind: ConfigMap
 metadata:
   name: {{ .Chart.Name }}
 data:
-  CAMUNDA_API_URI: "http://{{ tpl .Values.camunda_bpm_url . }}/camunda"
+  CAMUNDA_API_URI: "https://{{ tpl .Values.camunda_bpm_url . }}/camunda"
   FORMIO_DEBUG: "formio:*"
   KEYCLOAK_JWT_OIDC_ALGORITHMS: "RS256"
   KEYCLOAK_JWT_OIDC_CACHING_ENABLED: "True"
-  KEYCLOAK_JWT_OIDC_CONFIG: "http://{{ tpl .Values.keycloak_url . }}/auth/realms/{{ .Values.keycloak_realm }}/.well-known/openid-configuration"
-  KEYCLOAK_JWT_OIDC_ISSUER: "http://{{ tpl .Values.keycloak_url . }}/auth/realms/{{ .Values.keycloak_realm }}"
+  KEYCLOAK_JWT_OIDC_CONFIG: "https://{{ tpl .Values.keycloak_url . }}/auth/realms/{{ .Values.keycloak_realm }}/.well-known/openid-configuration"
+  KEYCLOAK_JWT_OIDC_ISSUER: "https://{{ tpl .Values.keycloak_url . }}/auth/realms/{{ .Values.keycloak_realm }}"
   KEYCLOAK_JWT_OIDC_JWKS_CACHE_TIMEOUT: "300"
-  KEYCLOAK_JWT_OIDC_JWKS_URI: "http://{{ tpl .Values.keycloak_url . }}/auth/realms/{{ .Values.keycloak_realm }}/protocol/openid-connect/certs"
-  KEYCLOAK_TOKEN_URL: "http://{{ tpl .Values.keycloak_url . }}/auth/realms/{{ .Values.keycloak_realm }}/protocol/openid-connect/token"
-  WEB_API_BASE_URL: "http://{{ tpl .Values.web_api_url . }}"
+  KEYCLOAK_JWT_OIDC_JWKS_URI: "https://{{ tpl .Values.keycloak_url . }}/auth/realms/{{ .Values.keycloak_realm }}/protocol/openid-connect/certs"
+  KEYCLOAK_TOKEN_URL: "https://{{ tpl .Values.keycloak_url . }}/auth/realms/{{ .Values.keycloak_realm }}/protocol/openid-connect/token"
+  WEB_API_BASE_URL: "https://{{ tpl .Values.web_api_url . }}"
