--- a/charts/forms-flow-analytics/values.yaml
+++ b/charts/forms-flow-analytics/values.yaml
@@ -1,5 +1,5 @@
 analytics_db_resource_name: forms-flow-analytics-postgresql
-analytics_url: analytics.{{ .Release.Namespace }}.apps.devops.aot-technologies.com
+analytics_url: analytics-{{ .Release.Namespace }}.apps.devops.aot-technologies.com
 cpu_limit: 600m
 cpu_request: 500m
 image_tag: latest
@@ -8,6 +8,6 @@ imagestream_name: forms-flow-analytics.build-redash
 memory_limit: 512Mi
 memory_request: 256Mi
 redash_database_url: postgresql://postgres:postgresql@forms-flow-analytics-postgresql:5432/postgres
-redash_host: analytics.{{ .Release.Namespace }}.apps.devops.aot-technologies.com
+redash_host: analytics-{{ .Release.Namespace }}.apps.devops.aot-technologies.com
 redash_image_src: https://github.com/AOT-Technologies/redash
 redash_redis_url: redis://redash-redis:6379/0
