--- a/charts/forms-flow-forms/values.yaml
+++ b/charts/forms-flow-forms/values.yaml
@@ -1,6 +1,6 @@
 cpu_limit: 200m
 cpu_request: 100m 
-forms_url: formio.{{ .Release.Namespace }}.apps.devops.aot-technologies.com
+forms_url: formio-{{ .Release.Namespace }}.apps.devops.aot-technologies.com
 formsflow_secret: forms-flow-ai
 image_tag: latest
 image_url: image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}-tools/{{ .Chart.Name }}.build
