--- a/charts/forms-flow-idm/values.yaml
+++ b/charts/forms-flow-idm/values.yaml
@@ -12,6 +12,8 @@ keycloak:
         -Dkeycloak.profile.feature.scripts=enabled
         -Dkeycloak.profile.feature.upload_scripts=enabled
         -Djava.net.preferIPv4Stack=true 
+    - name: PROXY_ADDRESS_FORWARDING
+      value: "true"
 
   extraVolumes: |
     - name: "forms-flow-idm-realm-config"
@@ -51,7 +53,7 @@ keycloak:
     host: "idm-{{ .Release.Namespace }}.apps.devops.aot-technologies.com"
     tls:
       enabled: true
-      insecureEdgeTerminationPolicy: Allow
+      insecureEdgeTerminationPolicy: Redirect
       termination: edge
   
 name: forms-flow-idm
