--- a/charts/forms-flow-web/values.yaml
+++ b/charts/forms-flow-web/values.yaml
@@ -16,7 +16,8 @@ react_app_client_id: '61856bbc69b630461b977ae3'
 react_app_staff_designer_id: '61856bbc69b630f304977adf'
 react_app_staff_reviewer_id: '61856bbc69b630f304977ae2'
 react_app_user_resource_form_id: '61856bbc69b6301d70977ae4'
-react_app_websocket_encrypt_key: "{REACT_APP_WEBSOCKET_ENCRYPT_KEY}"
+react_app_websocket_encrypt_key: FormsFlow.AI#{{ .Release.Namespace }}
 redash_secret_key: c2FY1BNNNGQP1sjaKGNIu8wXai1irSKqRIv3h1nb 
+redash_url: https://bpm-{{ .Release.Namespace }}.apps.devops.aot-technologies.com
 web_api_url: https://webapi-{{ .Release.Namespace }}.apps.devops.aot-technologies.com
 web_url: web-{{ .Release.Namespace }}.apps.devops.aot-technologies.com
