--- a/charts/forms-flow-analytics.build/values.yaml
+++ b/charts/forms-flow-analytics.build/values.yaml
@@ -1,7 +1,8 @@
 image_tag: latest
-cpu_limit: 800m
-cpu_request: 700m
-memory_limit: 1.2Gi
-memory_request: 1Gi 
+cpu_limit: 2
+cpu_request: 1
+memory_limit: 8Gi
+memory_request: 5Gi 
 source_repository_ref: master
-source_repository_url: https://github.com/AOT-Technologies/redash
+#source_repository_url: https://github.com/AOT-Technologies/redash
+source_repository_url: https://github.com/getredash/redash
