--- a/charts/forms-flow-analytics/templates/deploymentconfig.yaml
+++ b/charts/forms-flow-analytics/templates/deploymentconfig.yaml
@@ -83,6 +83,8 @@ spec:
               name: "{{ .Chart.Name }}"
         - name: REDASH_WEB_WORKERS
           value: "4"
+        - name: GUNICORN_CMD_ARGS
+          value: "--timeout 300"
         image: "{{ tpl .Values.image_url . }}:{{ .Values.image_tag }}"
         name: "{{ .Chart.Name }}-server"
         ports:
