--- a/charts/forms-flow-analytics/values.yaml
+++ b/charts/forms-flow-analytics/values.yaml
@@ -1,11 +1,11 @@
 analytics_db_resource_name: forms-flow-analytics-postgresql
 analytics_url: analytics-{{ .Release.Namespace }}.apps.devops.aot-technologies.com
-cpu_limit: 600m
+cpu_limit: 1
 cpu_request: 500m
 image_tag: latest
 image_url: image-registry.openshift-image-registry.svc:5000/{{ .Release.Namespace }}-tools/{{ .Chart.Name }}.build-redash
 imagestream_name: forms-flow-analytics.build-redash
-memory_limit: 512Mi
+memory_limit: 2Gi
 memory_request: 256Mi
 redash_database_url: postgresql://postgres:postgresql@forms-flow-analytics-postgresql:5432/postgres
 redash_host: analytics-{{ .Release.Namespace }}.apps.devops.aot-technologies.com
