--- a/charts/forms-flow-webapi/templates/deploymentconfig.yaml
+++ b/charts/forms-flow-webapi/templates/deploymentconfig.yaml
@@ -106,6 +106,11 @@ spec:
             configMapKeyRef:
               key: WEB_API_BASE_URL
               name: "{{ .Values.formsflow_config_name }}"
+        - name: KEYCLOAK_URL_REALM
+          valueFrom:
+            configMapKeyRef:
+              key: KEYCLOAK_URL_REALM
+              name: "{{ .Values.formsflow_config_name }}"
         - name: FORMSFLOW_API_CORS_ORIGINS
           value: '*'
         image: "{{ tpl .Values.image_url . }}:{{ .Values.tag_name }}"
