--- a/charts/forms-flow-ai/templates/secret.yaml
+++ b/charts/forms-flow-ai/templates/secret.yaml
@@ -7,8 +7,8 @@ metadata:
 stringData:
   BPM_CLIENT_ID: "{{ .Values.bpm_keycloak_clientid }}"
   BPM_CLIENT_SECRET: "{{ .Values.bpm_keycloak_clientsecret }}"
+  FORMIO_JWT_SECRET: "{{ .Release.Namespace }}-jwt-secret" 
   FORMIO_ROOT_EMAIL: "{{ .Values.formio_admin_email }}"
   FORMIO_ROOT_PASSWORD: "{{ .Values.formio_admin_password }}"
-  KEYCLOAK_REALM: "{{ .Values.keycloak_realm }}"
   WEB_CLIENTID: "{{ .Values.keycloak_web_clientid }}"
-  WEBSOCKET_ENCRYPT_KEY: "{{ .Values.websocket_encrypt_key }}"
+  WEBSOCKET_ENCRYPT_KEY: "{{ tpl .Values.websocket_encrypt_key .}}"
