--- a/charts/forms-flow-ai/values.yaml
+++ b/charts/forms-flow-ai/values.yaml
@@ -1,7 +1,7 @@
 bpm_keycloak_clientid: forms-flow-bpm
 bpm_keycloak_clientsecret: 786001d6-68a8-4519-903c-bc5b5a870d68
 camunda_bpm_url: bpm-{{ .Release.Namespace }}.apps.devops.aot-technologies.com
-formio_url: formio-{{ .Release.Namespace }}.apps.devops.aot-technologies.com
+formio_url: forms-flow-forms-{{ .Release.Namespace }}.apps.devops.aot-technologies.com
 formio_admin_email: me@defineme.com
 formio_admin_password: admin
 keycloak_realm: forms-flow-ai
