--- a/charts/forms-flow-bpm/templates/deploymentconfig.yaml
+++ b/charts/forms-flow-bpm/templates/deploymentconfig.yaml
@@ -69,9 +69,9 @@ spec:
               name: "{{ .Values.formsflow_config_name }}"
         - name: KEYCLOAK_URL_REALM
           valueFrom:
-            secretKeyRef:
-              key: KEYCLOAK_REALM
-              name: "{{ .Values.formsflow_secret }}"
+            configMapKeyRef:
+              key: KEYCLOAK_URL_REALM
+              name: "{{ .Values.formsflow_config_name }}"
         - name: KEYCLOAK_CLIENTID
           valueFrom:
             secretKeyRef:
@@ -148,13 +148,13 @@ spec:
         image: "{{ tpl .Values.image_url . }}:{{ .Values.image_tag }}"
         imagePullPolicy: Always
         livenessProbe:
-          failureThreshold: 3
+          failureThreshold: 5
           httpGet:
             path: /camunda/actuator/health
             port: 8080
             scheme: HTTP
-          initialDelaySeconds: 60
-          periodSeconds: 10
+          initialDelaySeconds: 120
+          periodSeconds: 60
           successThreshold: 1
           timeoutSeconds: 3
         name: "{{ .Chart.Name }}"
@@ -162,12 +162,12 @@ spec:
         - containerPort: 8080
           protocol: TCP
         readinessProbe:
-          failureThreshold: 3
+          failureThreshold: 5
           httpGet:
             path: /camunda/actuator/health
             port: 8080
             scheme: HTTP
-          initialDelaySeconds: 60
+          initialDelaySeconds: 120
           periodSeconds: 60
           successThreshold: 1
           timeoutSeconds: 3
